#+title: corfu.el - Changelog
#+author: Daniel Mendler
#+language: en

* Version 1.1 (2023-12-27)

- Deduplicate candidates with respect to ~equal-including-properties~, such that
  backends can provide equal candidate strings, which only differ in their text
  properties and annotations.
- Ensure that the string passed to the ~:exit-function~ retains the candidate
  properties, when possible. The properties are guaranteed to exist when a
  candidate is selected explicitly, but may be missing when candidates are
  completed in a stepwise manner.
- ~corfu-on-exact-match~: Add value ~show~ to the customization option. With this
  setting the Corfu popup will be shown even if there is only a single matching
  candidate.

* Version 1.0 (2023-12-01)

- Bug fixes.
- =corfu-quick=: Use a slightly different scheme to support more candidates.
- =corfu-reset=: Quit immediately if input did not change.

* Version 0.38 (2023-08-14)

- =corfu-quick=: Bugfix.
- =corfu-mode-map=: Add mode map.
- Replace =corfu-excluded-modes= with =global-corfu-modes=, the Emacs 28 convention
  for globalized minor modes.

* Version 0.37 (2023-07-02)

- Bugfixes.
- Improve child frame display code, =corfu--popup-show= takes a =posn= argument.
- Ensure that the popup font matches the font of the parent frame.
- Close popup when window selection changes.
- Remove =corfu-history-length=. Instead set the =history-length= property of
  =corfu-history= variable.
- =corfu-info-documentation=, =corfu-info-location=: Make buffer and window
  persistent if called with prefix argument.

* Version 0.36 (2023-03-27)

- Drop obsolete =corfu-preselect-first=.
- =corfu-popupinfo-delay= and =corfu-echo-delay=: Remove support for value =t=.
  Instant updates are not recommended. It is still possible to use a small value
  for the delay.
- Rename =corfu-excluded-modes= to =corfu-exclude-modes= (Naming convention).
- Remove call to =undo-boundary=, which caused issues with auto completion.
